Dando un poco de estilos generales a la plantilla vacía

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,15 @@
  *= require_self
  *= require_tree . 
 */
+
+#header
+{
+  width: 95em;
+  margin: 0 auto;
+}
+
+#content
+{
+  width: 95em;
+  margin: 0 auto;
+}
