Añadiendo unos primeros gráficos en la página del territorio con D3

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,14 @@
   width: 95em;
   margin: 0 auto;
 }
+
+#graphic div div
+{
+  float:left;
+  border: 1px solid #999;
+}
+
+#graphic div span
+{
+  display:block;
+}
