Añadido algo de estilo bastante simple

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,15 +8,91 @@
 
 #header
 {
-  width: 95em;
+  background-color: #000000;
+  color: #FFFFFF;
+  padding:3em 0;
+}
+
+
+#header a
+{
+  color: #FFFFFF;
+}
+
+#header h1
+{
+  font-size: 2.8em;
+  display: inline;
+}
+
+#header .nombre-territorio
+{
+  font-size: 1.4em;
+  font-style:italic;
+}
+
+#header h1 a
+{
+  text-decoration:none;
+}
+
+#header #menu
+{  
+  float:right;
+  margin-top:1em;
+  font-size: 1.2em;
+}
+
+#header #menu li
+{
+  display: inline;
+}
+
+.wrapper
+{
+  max-width: 95em;  
   margin: 0 auto;
 }
 
-#content
+#sidebar
 {
-  width: 95em;
-  margin: 0 auto;
+  float:right;
+  background-color:#FF9955;
+  color: #FFFFFF;
+  border: 2px solid #FF7F2A;  
+  border-radius: 15px;
+  padding: 1em 2em 5em;
+  margin-top: 2em;
+  font-size: 1.4em;
 }
+
+#sidebar h3
+{
+  margin-bottom:1em;
+}
+
+#sidebar li
+{
+  margin-bottom:1em;
+}
+
+table.datos-principales
+{
+  width:100%;
+  margin-top:2em;
+}
+
+table.datos-principales th
+{
+  font-size:1.3em;
+}
+
+table.datos-principales tbody td
+{
+  border-bottom: 1px solid #FF7F2A;
+  padding:1em 20px;
+}
+
 
 #graphic div div
 {
