--- a/app/views/territorios/show_pais.html.erb
+++ b/app/views/territorios/show_pais.html.erb
@@ -1,3 +1,9 @@
+<% content_for :head do%>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?2.1.3"></script>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.geom.js?2.1.3"></script>
+    <script type="text/javascript" src="http://mbostock.github.com/d3/d3.layout.js?2.1.3"></script>
+<% end %>
+
 <%= raw @territorio.decorator(:Html).sidebar %>
 <div id="sidebar">
   <h3><%=@territorio.nombre%></h3>
@@ -17,6 +23,8 @@
 
 <div id="inner_content">
   
+  <div id="graphic"></div>
+
   <table class="datos-principales">
     <thead>
       <tr>
@@ -57,11 +65,8 @@
   </table>
 </div>
 
-<div id="graphic"></div>
-
-
 <script type="text/javascript">
-<%= raw @territorio.decorator(:Js).historico_partidos %>
+<%= raw @territorio.decorator(:Js).distribucion_partidos %>
 </script>
 
 <div>
