--- a/app/views/territorios/show_pais.html.erb
+++ b/app/views/territorios/show_pais.html.erb
@@ -2,6 +2,7 @@
     <script type="text/javascript" src="http://mbostock.github.com/d3/d3.js?2.1.3"></script>
     <script type="text/javascript" src="http://mbostock.github.com/d3/d3.geom.js?2.1.3"></script>
     <script type="text/javascript" src="http://mbostock.github.com/d3/d3.layout.js?2.1.3"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <% end %>
 
 <%= raw @territorio.decorator(:Html).sidebar %>
@@ -39,7 +40,7 @@
     <tbody>
     <% ultimo_resultado = nil %>
       <% @territorio.ultimo_escrutinio.resultados.all(:order => "total_votos ASC"). each do |resultado| %>
-      <tr>
+      <tr class="party-<%=resultado.id%>">
         <td>
           <%= resultado.partido.nombre %>
         </td>
